--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12"]
         exclude:
           # Exclude some combinations to reduce CI time while maintaining good coverage
           - os: macos-latest
-            python-version: "3.11"
-          - os: windows-latest
             python-version: "3.11"
 
     steps:
