fix: install package in editable mode in CI for imports to work
- Add editable install step to all CI jobs
- Ensures easy_tts_server module can be imported during testing
- Fixes ModuleNotFoundError in GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,10 @@ jobs:
       run: |
         uv sync
 
+    - name: Install package in editable mode
+      run: |
+        uv pip install -e .
+
     - name: Install spaCy models
       run: |
         uv run python -m spacy download en_core_web_sm
@@ -72,6 +76,10 @@ jobs:
         uv sync
         uv add --dev ruff black isort mypy
 
+    - name: Install package in editable mode
+      run: |
+        uv pip install -e .
+
     - name: Run ruff (linting)
       run: |
         uv run ruff check src/ tests/
@@ -103,6 +111,14 @@ jobs:
       uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
+
+    - name: Install dependencies
+      run: |
+        uv sync
+
+    - name: Install package in editable mode
+      run: |
+        uv pip install -e .
 
     - name: Build package
       run: |
